--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
     mavenCentral()
 }
 
+group = 'org.rythmengine'
+version = '1.2'
+
 def springVersion = '4.1.5.RELEASE'
 
 dependencies {
@@ -40,13 +43,13 @@ gitPublishConfig {
     repo = "spring-rythm"
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId 'org.rythmengine'
-            artifactId 'spring-rythm'
-            version '1.2'
-
             from components.java
         }
     }
